{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 83,
  "lineage": "7489c916-44b4-c7a6-dec2-01f2540e5da2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Ted_VPC_INGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:internet-gateway/igw-00b4336c2707e0c5f",
            "id": "igw-00b4336c2707e0c5f",
            "owner_id": "475139428013",
            "tags": {
              "Name": "Ted VPC Internet Gateway"
            },
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "Bastion_internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00b4336c2707e0c5f",
            "id": "r-rtb-0b253dca23ed2082b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0b253dca23ed2082b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.Ted_VPC_INGW",
            "aws_route_table.Bastion_route_table",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Backend_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0697716248a474fea",
            "owner_id": "475139428013",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private - Backend Route Table"
            },
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Bastion_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0b253dca23ed2082b",
            "owner_id": "475139428013",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00b4336c2707e0c5f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public - Bastion Route Table"
            },
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Backend_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-010b4d90674fc6a90",
            "route_table_id": "rtb-0697716248a474fea",
            "subnet_id": "subnet-0645af19952fd8cb3"
          },
          "dependencies": [
            "aws_route_table.Backend_route_table",
            "aws_subnet.Backend_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Bastion_association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d2e8ca07adaa9efd",
            "route_table_id": "rtb-0b253dca23ed2082b",
            "subnet_id": "subnet-0793b2aceb4f49211"
          },
          "dependencies": [
            "aws_route_table.Bastion_route_table",
            "aws_subnet.Bastion_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Ted-VPC_Security_Group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:security-group/sg-0d67f8197212d0d47",
            "description": "HTTP-SSH-SSL-ICMP-ALL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d67f8197212d0d47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "Ted VPC Security Group",
            "name_prefix": "",
            "owner_id": "475139428013",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "HTTP-SSH-SSL-ICMP-ALL",
              "Name": "Ted VPC Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Backend_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:subnet/subnet-0645af19952fd8cb3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.20.0/24",
            "id": "subnet-0645af19952fd8cb3",
            "map_public_ip_on_launch": false,
            "owner_id": "475139428013",
            "tags": {
              "Name": "Private - Backend Subnet"
            },
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Bastion_Subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:subnet/subnet-0793b2aceb4f49211",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.10.0/24",
            "id": "subnet-0793b2aceb4f49211",
            "map_public_ip_on_launch": true,
            "owner_id": "475139428013",
            "tags": {
              "Name": "Public - Bastion Subnet"
            },
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Ted-VPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc/vpc-0d187503f8596450d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0b923d9ec1bcd8b67",
            "default_route_table_id": "rtb-0bf940faf5034471a",
            "default_security_group_id": "sg-04c167703b8aa9d15",
            "dhcp_options_id": "dopt-62539b08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0d187503f8596450d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0bf940faf5034471a",
            "owner_id": "475139428013",
            "tags": {
              "Name": "Ted VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc-endpoint/vpce-024dd1bacd976a7ad",
            "dns_entry": [
              {
                "dns_name": "vpce-024dd1bacd976a7ad-ei2ksoc1.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-024dd1bacd976a7ad-ei2ksoc1-eu-central-1a.ec2.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z06859953KAMKV6D05F6R"
              }
            ],
            "id": "vpce-024dd1bacd976a7ad",
            "network_interface_ids": [
              "eni-0488454a55fa86c9f"
            ],
            "owner_id": "475139428013",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d67f8197212d0d47"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2",
            "state": "available",
            "subnet_ids": [
              "subnet-0645af19952fd8cb3"
            ],
            "tags": {
              "Name": "service-endpoint-for-ec2",
              "Srv": "VPC",
              "Tech": "Service Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_security_group.Ted-VPC_Security_Group",
            "aws_subnet.Backend_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2messages",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc-endpoint/vpce-03bcfbbe7ff813ffc",
            "dns_entry": [
              {
                "dns_name": "vpce-03bcfbbe7ff813ffc-rifyynle.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-03bcfbbe7ff813ffc-rifyynle-eu-central-1a.ec2messages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ec2messages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z07323811GG9XL4Z5EJFO"
              }
            ],
            "id": "vpce-03bcfbbe7ff813ffc",
            "network_interface_ids": [
              "eni-0f0f5941012b51d35"
            ],
            "owner_id": "475139428013",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d67f8197212d0d47"
            ],
            "service_name": "com.amazonaws.eu-central-1.ec2messages",
            "state": "available",
            "subnet_ids": [
              "subnet-0645af19952fd8cb3"
            ],
            "tags": {
              "Name": "service-endpoint-for-ec2 messages",
              "Srv": "VPC",
              "Tech": "Service Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_security_group.Ted-VPC_Security_Group",
            "aws_subnet.Backend_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc-endpoint/vpce-0248ce376572c91ac",
            "cidr_blocks": [
              "52.219.44.0/22",
              "52.219.140.0/24",
              "52.219.72.0/22"
            ],
            "id": "vpce-0248ce376572c91ac",
            "owner_id": "475139428013",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-6ea54007",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0697716248a474fea"
            ],
            "service_name": "com.amazonaws.eu-central-1.s3",
            "state": "available",
            "tags": {
              "Name": "service-endpoint-for-ec2 messages",
              "Srv": "VPC",
              "Tech": "Service Endpoint"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_route_table.Backend_route_table",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc-endpoint/vpce-0316c60b423b9d3fb",
            "dns_entry": [
              {
                "dns_name": "vpce-0316c60b423b9d3fb-8vcn5knl.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0316c60b423b9d3fb-8vcn5knl-eu-central-1a.ssm.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssm.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z0709206H7J9K5T0KQSB"
              }
            ],
            "id": "vpce-0316c60b423b9d3fb",
            "network_interface_ids": [
              "eni-06533c543233e6e9c"
            ],
            "owner_id": "475139428013",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d67f8197212d0d47"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssm",
            "state": "available",
            "subnet_ids": [
              "subnet-0645af19952fd8cb3"
            ],
            "tags": {
              "Name": "service-endpoint-for-ssm",
              "Srv": "VPC",
              "Tech": "Service Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_security_group.Ted-VPC_Security_Group",
            "aws_subnet.Backend_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:475139428013:vpc-endpoint/vpce-0ae0b7ebc2998ec07",
            "dns_entry": [
              {
                "dns_name": "vpce-0ae0b7ebc2998ec07-r2nz9mlp.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "vpce-0ae0b7ebc2998ec07-r2nz9mlp-eu-central-1a.ssmmessages.eu-central-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z273ZU8SZ5RJPC"
              },
              {
                "dns_name": "ssmmessages.eu-central-1.amazonaws.com",
                "hosted_zone_id": "Z06847542IIQNL6IGZASB"
              }
            ],
            "id": "vpce-0ae0b7ebc2998ec07",
            "network_interface_ids": [
              "eni-0b10fbad176296d33"
            ],
            "owner_id": "475139428013",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d67f8197212d0d47"
            ],
            "service_name": "com.amazonaws.eu-central-1.ssmmessages",
            "state": "available",
            "subnet_ids": [
              "subnet-0645af19952fd8cb3"
            ],
            "tags": {
              "Name": "service-endpoint-for-ssm messages",
              "Srv": "VPC",
              "Tech": "Service Endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0d187503f8596450d"
          },
          "dependencies": [
            "aws_security_group.Ted-VPC_Security_Group",
            "aws_subnet.Backend_Subnet",
            "aws_vpc.Ted-VPC"
          ]
        }
      ]
    }
  ]
}